--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -3,4 +3,5 @@ cmake_minimum_required(VERSION 3.20)
 project(examples)
 
 add_subdirectory(file_io)
+add_subdirectory(file_io_timeout)
 add_subdirectory(multiplex_tcp_server)
